tests/out/error/fun/param_redefine.in.bt
fun foo(p string) {
	p := 123
}
